test/files/neg/t6528.check
t6528.scala:6: error: could not find implicit value for parameter e: CoSet[U,Any]
  implicitly[CoSet[U, Any]]
            ^
one error found
